@@ -1713,6 +1713,9 @@ class LaTeXTranslator(nodes.NodeVisitor):
         if classes in [['menuselection'], ['guilabel']]:
             self.body.append(r'\emph{')
             self.context.append('}')
+        elif classes in [['accelerator']]:
+            self.body.append(r'\underline{')
+            self.context.append('}')
         elif classes and not self.in_title:
             self.body.append(r'\DUspan{%s}{' % ','.join(classes))
             self.context.append('}')
