@@ -52,6 +52,7 @@ Bugs fixed
 * #1540: Fix RuntimeError with circular referenced toctree
 * #1983: i18n translation feature breaks references which uses section name.
 * #1990: Use caption of toctree to title of \tableofcontents in LaTeX
+* #1987: Fix ampersand is ignored in ``:menuselection:`` and ``:guilabel:`` on LaTeX builder
 
 
 Release 1.3.1 (released Mar 17, 2015)
